2004-08-11  Tom Tromey  <tromey@redhat.com>

	* gcj/javaprims.h: Regenerated.
	* java/lang/natClassLoader.cc (getClassLoader0): Removed.
	(_registerClass): Likewise.
	* Makefile.in: Rebuilt.
	* Makefile.am (core_java_source_files): Added VMCompiler.
	* java/lang/Compiler.java: Rewrote in terms of VMCompiler.
	* java/lang/VMCompiler.java: New file.
	* gnu/gcj/runtime/SharedLibHelper.java (findClass): Removed
	`verbose' code.
	(copyFile): Don't use fully-qualified name.
	(h): Removed.
	* java/lang/natVMClassLoader.cc: Include VMCompiler.h.
	(defineClass): Use VMCompiler.
	* java/lang/ClassLoader.java (defineClass): Removed jit
	compilation code and `verbose' code.
	(getClassLoader0): Removed.
	(_registerClass): Likewise.
	(SharedLibHelpers): Removed.

2004-08-10  Tom Tromey  <tromey@redhat.com>

	* java/net/URLClassLoader.java (URLLoader(URLClassLoader, URL,
	URL)): New constructor.
	(SoURLLoader): Likewise.
	(JarURLLoader): Create SoURLLoader with override URL.

2004-08-10  Mark Wielaard  <mark@klomp.org>

	* Makefile.in: Rebuilt.
	* Makefile.am (interpret.lo): New rule.

2004-08-05  Andrew Haley  <aph@redhat.com>

	* java/net/URLClassLoader.java (JarURLLoader.JarURLLoader): Look
	aside for "GCJLIBS" in directory where jarfiles are loaded.	
	(JarURLLoader.getClass): New method.
	(JarURLLoader.toString):  New method.
	(FileResource.toString):  New method.
	* java/lang/natClassLoader.cc (_Jv_RegisterClassHookDefault):
	Remove "Duplicate class registration: " bug.
	(_registerClass): New method.
	* java/lang/natClass.cc (_Jv_LinkSymbolTable): Check method index.
	(_Jv_LinkSymbolTable): Call _Jv_LayoutClass().
	Add debugging.
	(_Jv_LayoutClass): Use getSuperclass() rather than directly
	accessing the field.
	* java/lang/ClassLoader.java (SharedLibHelpers): New variable.
	(defineClass): Call gcj to JIT-compile a class.
	(_registerClass): New method.
	* gnu/gcj/runtime/SharedLibHelper.java (findHelper): A shared